src/matlab2cpp/MatlabParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .MatlabListener import MatlabListener
else:
    from MatlabListener import MatlabListener


class MatlabParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'\n'", u"';'", u"'\n}'", u"'if{'", 
                     u"','", u"'\nelseif'", u"'\nelse'", u"'switch{'", u"'\ncase'", 
                     u"'\notherwise'", u"'function{'", u"'('", u"')'", u"'['", 
                     u"']'", u"'for{'", u"'while{'", u"'try{\n'", u"'\ncatch'", 
                     u"'\ncatch\n'", u"']='", u"')='", u"'\\{'", u"'\\}='", 
                     u"'!'", u"'?'", u"'\\}'", u"'::'", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'$'", u"<INVALID>", u"'||'", 
                     u"'&&'", u"'|'", u"'&'", u"'%%'", u"'<='", u"'>='", 
                     u"'<>'", u"'<'", u"'>'", u"':'", u"'+'", u"'-'", u"'/'", 
                     u"'\\'", u"'*'", u"'./'", u"'.\\'", u"'.*'", u"'^'", 
                     u"'.^'", u"'~'", u"'='", u"'''", u"'.''" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"OPR", u"PRE", u"ID", u"INT", u"FLOAT", 
                      u"IINT", u"IFLOAT", u"STRING", u"END", u"POST", u"LOG_OR", 
                      u"LOG_AND", u"BIN_OR", u"BIN_AND", u"EQEQ", u"LSTE", 
                      u"GRTE", u"NEQ", u"LST", u"GRT", u"COLON", u"PLUS", 
                      u"MINUS", u"LEFTDIV", u"RIGHTDIV", u"TIMES", u"EL_LEFTDIV", 
                      u"EL_RIGHTDIV", u"EL_TIMES", u"EXP", u"EL_EXP", u"NEG", 
                      u"EQ", u"CCT", u"EL_CCT", u"WS", u"THREEDOTS" ]

    RULE_program = 0
    RULE_codeblock = 1
    RULE_codeline = 2
    RULE_branch = 3
    RULE_branch_if = 4
    RULE_branch_elif = 5
    RULE_branch_else = 6
    RULE_condition = 7
    RULE_switch_ = 8
    RULE_switch_case = 9
    RULE_switch_otherwise = 10
    RULE_function = 11
    RULE_function_returns = 12
    RULE_function_params = 13
    RULE_loop = 14
    RULE_loop_range = 15
    RULE_wloop = 16
    RULE_try_ = 17
    RULE_catchid = 18
    RULE_catch_ = 19
    RULE_statement = 20
    RULE_assignment = 21
    RULE_sets = 22
    RULE_expr = 23
    RULE_expr_ = 24
    RULE_llist = 25
    RULE_llist_ = 26
    RULE_matrix = 27
    RULE_vector = 28

    ruleNames =  [ u"program", u"codeblock", u"codeline", u"branch", u"branch_if", 
                   u"branch_elif", u"branch_else", u"condition", u"switch_", 
                   u"switch_case", u"switch_otherwise", u"function", u"function_returns", 
                   u"function_params", u"loop", u"loop_range", u"wloop", 
                   u"try_", u"catchid", u"catch_", u"statement", u"assignment", 
                   u"sets", u"expr", u"expr_", u"llist", u"llist_", u"matrix", 
                   u"vector" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    OPR=29
    PRE=30
    ID=31
    INT=32
    FLOAT=33
    IINT=34
    IFLOAT=35
    STRING=36
    END=37
    POST=38
    LOG_OR=39
    LOG_AND=40
    BIN_OR=41
    BIN_AND=42
    EQEQ=43
    LSTE=44
    GRTE=45
    NEQ=46
    LST=47
    GRT=48
    COLON=49
    PLUS=50
    MINUS=51
    LEFTDIV=52
    RIGHTDIV=53
    TIMES=54
    EL_LEFTDIV=55
    EL_RIGHTDIV=56
    EL_TIMES=57
    EXP=58
    EL_EXP=59
    NEG=60
    EQ=61
    CCT=62
    EL_CCT=63
    WS=64
    THREEDOTS=65

    def __init__(self, input):
        super(MatlabParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MatlabParser.EOF, 0)

        def codeblock(self):
            return self.getTypedRuleContext(MatlabParser.CodeblockContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_program

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitProgram(self)




    def program(self):

        localctx = MatlabParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 58
                self.match(MatlabParser.T__0)


            self.state = 62
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MatlabParser.T__3) | (1 << MatlabParser.T__7) | (1 << MatlabParser.T__10) | (1 << MatlabParser.T__11) | (1 << MatlabParser.T__13) | (1 << MatlabParser.T__15) | (1 << MatlabParser.T__16) | (1 << MatlabParser.T__17) | (1 << MatlabParser.PRE) | (1 << MatlabParser.ID) | (1 << MatlabParser.INT) | (1 << MatlabParser.FLOAT) | (1 << MatlabParser.IINT) | (1 << MatlabParser.IFLOAT) | (1 << MatlabParser.STRING) | (1 << MatlabParser.END))) != 0):
                self.state = 61
                self.codeblock()


            self.state = 65
            _la = self._input.LA(1)
            if _la==MatlabParser.T__0:
                self.state = 64
                self.match(MatlabParser.T__0)


            self.state = 67
            self.match(MatlabParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodeblockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.CodeblockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def codeline(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MatlabParser.CodelineContext)
            else:
                return self.getTypedRuleContext(MatlabParser.CodelineContext,i)


        def getRuleIndex(self):
            return MatlabParser.RULE_codeblock

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterCodeblock(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitCodeblock(self)




    def codeblock(self):

        localctx = MatlabParser.CodeblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_codeblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.codeline()
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 75
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 71
                        _la = self._input.LA(1)
                        if _la==MatlabParser.T__1:
                            self.state = 70
                            self.match(MatlabParser.T__1)


                        self.state = 73
                        self.match(MatlabParser.T__0)
                        pass

                    elif la_ == 2:
                        self.state = 74
                        self.match(MatlabParser.T__1)
                        pass


                    self.state = 77
                    self.codeline() 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodelineContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.CodelineContext, self).__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(MatlabParser.FunctionContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MatlabParser.AssignmentContext,0)


        def loop(self):
            return self.getTypedRuleContext(MatlabParser.LoopContext,0)


        def wloop(self):
            return self.getTypedRuleContext(MatlabParser.WloopContext,0)


        def branch(self):
            return self.getTypedRuleContext(MatlabParser.BranchContext,0)


        def switch_(self):
            return self.getTypedRuleContext(MatlabParser.Switch_Context,0)


        def try_(self):
            return self.getTypedRuleContext(MatlabParser.Try_Context,0)


        def statement(self):
            return self.getTypedRuleContext(MatlabParser.StatementContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_codeline

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterCodeline(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitCodeline(self)




    def codeline(self):

        localctx = MatlabParser.CodelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_codeline)
        try:
            self.state = 91
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.function()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.loop()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.wloop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.branch()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.switch_()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 89
                self.try_()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 90
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BranchContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.BranchContext, self).__init__(parent, invokingState)
            self.parser = parser

        def branch_if(self):
            return self.getTypedRuleContext(MatlabParser.Branch_ifContext,0)


        def branch_elif(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MatlabParser.Branch_elifContext)
            else:
                return self.getTypedRuleContext(MatlabParser.Branch_elifContext,i)


        def branch_else(self):
            return self.getTypedRuleContext(MatlabParser.Branch_elseContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_branch

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterBranch(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitBranch(self)




    def branch(self):

        localctx = MatlabParser.BranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_branch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.branch_if()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MatlabParser.T__5:
                self.state = 94
                self.branch_elif()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            _la = self._input.LA(1)
            if _la==MatlabParser.T__6:
                self.state = 100
                self.branch_else()


            self.state = 103
            self.match(MatlabParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Branch_ifContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.Branch_ifContext, self).__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(MatlabParser.ConditionContext,0)


        def codeline(self):
            return self.getTypedRuleContext(MatlabParser.CodelineContext,0)


        def codeblock(self):
            return self.getTypedRuleContext(MatlabParser.CodeblockContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_branch_if

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterBranch_if(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitBranch_if(self)




    def branch_if(self):

        localctx = MatlabParser.Branch_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_branch_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MatlabParser.T__3)
            self.state = 106
            self.condition()
            self.state = 116
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 108
                _la = self._input.LA(1)
                if _la==MatlabParser.T__4:
                    self.state = 107
                    self.match(MatlabParser.T__4)


                self.state = 110
                self.codeline()

            elif la_ == 2:
                self.state = 112
                _la = self._input.LA(1)
                if _la==MatlabParser.T__4:
                    self.state = 111
                    self.match(MatlabParser.T__4)


                self.state = 114
                self.match(MatlabParser.T__0)
                self.state = 115
                self.codeblock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Branch_elifContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.Branch_elifContext, self).__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(MatlabParser.ConditionContext,0)


        def codeline(self):
            return self.getTypedRuleContext(MatlabParser.CodelineContext,0)


        def codeblock(self):
            return self.getTypedRuleContext(MatlabParser.CodeblockContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_branch_elif

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterBranch_elif(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitBranch_elif(self)




    def branch_elif(self):

        localctx = MatlabParser.Branch_elifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_branch_elif)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(MatlabParser.T__5)
            self.state = 119
            self.condition()
            self.state = 127
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 120
                self.match(MatlabParser.T__4)
                self.state = 121
                self.codeline()

            elif la_ == 2:
                self.state = 123
                _la = self._input.LA(1)
                if _la==MatlabParser.T__4:
                    self.state = 122
                    self.match(MatlabParser.T__4)


                self.state = 125
                self.match(MatlabParser.T__0)
                self.state = 126
                self.codeblock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Branch_elseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.Branch_elseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def codeline(self):
            return self.getTypedRuleContext(MatlabParser.CodelineContext,0)


        def codeblock(self):
            return self.getTypedRuleContext(MatlabParser.CodeblockContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_branch_else

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterBranch_else(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitBranch_else(self)




    def branch_else(self):

        localctx = MatlabParser.Branch_elseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_branch_else)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(MatlabParser.T__6)
            self.state = 139
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 131
                _la = self._input.LA(1)
                if _la==MatlabParser.T__4:
                    self.state = 130
                    self.match(MatlabParser.T__4)


                self.state = 133
                self.codeline()

            elif la_ == 2:
                self.state = 135
                _la = self._input.LA(1)
                if _la==MatlabParser.T__4:
                    self.state = 134
                    self.match(MatlabParser.T__4)


                self.state = 137
                self.match(MatlabParser.T__0)
                self.state = 138
                self.codeblock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.ConditionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MatlabParser.ExprContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_condition

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterCondition(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitCondition(self)




    def condition(self):

        localctx = MatlabParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Switch_Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.Switch_Context, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MatlabParser.ExprContext,0)


        def switch_case(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MatlabParser.Switch_caseContext)
            else:
                return self.getTypedRuleContext(MatlabParser.Switch_caseContext,i)


        def switch_otherwise(self):
            return self.getTypedRuleContext(MatlabParser.Switch_otherwiseContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_switch_

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterSwitch_(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitSwitch_(self)




    def switch_(self):

        localctx = MatlabParser.Switch_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_switch_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(MatlabParser.T__7)
            self.state = 144
            self.expr()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MatlabParser.T__8:
                self.state = 145
                self.switch_case()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 152
            _la = self._input.LA(1)
            if _la==MatlabParser.T__9:
                self.state = 151
                self.switch_otherwise()


            self.state = 154
            self.match(MatlabParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Switch_caseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.Switch_caseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MatlabParser.ExprContext,0)


        def codeblock(self):
            return self.getTypedRuleContext(MatlabParser.CodeblockContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_switch_case

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterSwitch_case(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitSwitch_case(self)




    def switch_case(self):

        localctx = MatlabParser.Switch_caseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_switch_case)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(MatlabParser.T__8)
            self.state = 157
            self.expr()
            self.state = 160
            _la = self._input.LA(1)
            if _la==MatlabParser.T__0:
                self.state = 158
                self.match(MatlabParser.T__0)
                self.state = 159
                self.codeblock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Switch_otherwiseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.Switch_otherwiseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def codeblock(self):
            return self.getTypedRuleContext(MatlabParser.CodeblockContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_switch_otherwise

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterSwitch_otherwise(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitSwitch_otherwise(self)




    def switch_otherwise(self):

        localctx = MatlabParser.Switch_otherwiseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_switch_otherwise)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MatlabParser.T__9)
            self.state = 165
            _la = self._input.LA(1)
            if _la==MatlabParser.T__0:
                self.state = 163
                self.match(MatlabParser.T__0)
                self.state = 164
                self.codeblock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.FunctionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MatlabParser.ID, 0)

        def function_returns(self):
            return self.getTypedRuleContext(MatlabParser.Function_returnsContext,0)


        def function_params(self):
            return self.getTypedRuleContext(MatlabParser.Function_paramsContext,0)


        def codeblock(self):
            return self.getTypedRuleContext(MatlabParser.CodeblockContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_function

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterFunction(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitFunction(self)




    def function(self):

        localctx = MatlabParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(MatlabParser.T__10)
            self.state = 169
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.state = 168
                self.function_returns()


            self.state = 171
            self.match(MatlabParser.ID)
            self.state = 172
            self.match(MatlabParser.T__11)
            self.state = 174
            _la = self._input.LA(1)
            if _la==MatlabParser.ID:
                self.state = 173
                self.function_params()


            self.state = 176
            self.match(MatlabParser.T__12)
            self.state = 177
            _la = self._input.LA(1)
            if not(_la==MatlabParser.T__0 or _la==MatlabParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 179
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MatlabParser.T__3) | (1 << MatlabParser.T__7) | (1 << MatlabParser.T__10) | (1 << MatlabParser.T__11) | (1 << MatlabParser.T__13) | (1 << MatlabParser.T__15) | (1 << MatlabParser.T__16) | (1 << MatlabParser.T__17) | (1 << MatlabParser.PRE) | (1 << MatlabParser.ID) | (1 << MatlabParser.INT) | (1 << MatlabParser.FLOAT) | (1 << MatlabParser.IINT) | (1 << MatlabParser.IFLOAT) | (1 << MatlabParser.STRING) | (1 << MatlabParser.END))) != 0):
                self.state = 178
                self.codeblock()


            self.state = 182
            _la = self._input.LA(1)
            if _la==MatlabParser.T__1:
                self.state = 181
                self.match(MatlabParser.T__1)


            self.state = 184
            self.match(MatlabParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_returnsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MatlabParser.Function_returnsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(MatlabParser.ID)
            else:
                return self.getToken(MatlabParser.ID, i)

        def getRuleIndex(self):
            return MatlabParser.RULE_function_returns

        def enterRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.enterFunction_returns(self)

        def exitRule(self, listener):
            if isinstance( listener, MatlabListener ):
                listener.exitFunction_returns(self)




    def function_returns(self):
